[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Kungfoome"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.11.8"
ofxtools = "^0.8.22"
fastapi = "^0.61.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
flake8 = "^3.8.3"
isort = "^5.5.2"
mypy = "^0.782"
yapf = "^0.30.0"
pylint = "^2.6.0"

[tool.poetry.scripts]
dev = 'app.main:app'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

